# naivedb

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  commitlint.config.js  package.json
.github/: PULL_REQUEST_TEMPLATE.md
config/: naivedb_config.h.in
include/: BPlusTree.h
src/: IndexManager.cpp  exec.sh  main.cc
